projeto-salesforce/force-app/main/default/objects/Contrato_de_Manutencao__c/Contrato_de_Manutencao__c.object-meta.xml
<CustomObject>
    <label>Contrato de Manutencao</label>
    <nameField>
        <label>Contrato de Manutencao Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos de Manutencao</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>