projeto-salesforce/force-app/main/default/objects/Contrato_de_Manutencao__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Manutencao</relationshipLabel>
    <relationshipName>Contratos_de_Manutencao</relationshipName>
    <type>Lookup</type>
</CustomField>