projeto-salesforce/force-app/main/default/objects/Contrato_de_Manutencao__c/fields/Data_de_Fim__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Fim__c</fullName>
    <label>Data de Fim</label>
    <type>Date</type>
</CustomField>