projeto-salesforce/force-app/main/default/objects/Contrato_de_Manutencao__c/fields/Valor_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Valor_Mensal__c</fullName>
    <label>Valor Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>